修改菜单为webview方式加载

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <!-- onLoginClick -->
     <string name="user_name">用户名</string>
     <string name="password">密码</string>
-    <string name="login">Login</string>
+    <string name="login">登录</string>
     <string name="login_in_browser">浏览器登录</string>
     <string name="oauth_tip">使用浏览器登录(默认)</string>
     <string name="user_name_warning">账号错误!</string>
@@ -34,7 +34,7 @@
     <!-- menu -->
     <string name="profile">Profile</string>
     <string name="notifications">Notifications</string>
-    <string name="news">News</string>
+    <string name="news">井下作业管理</string>
     <string name="issues">Issues</string>
     <string name="web_view1">web_view1</string>
     <string name="web_view2">web_view2</string>
